--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 * {
     font-family: helvetica;     
-    font-weight: bolder;
+    /* font-weight: bolder; */
+    /* ^ Removed because it distorted italics */
+    font-size: 18px;
 }
 
 body {
@@ -19,3 +21,204 @@ table, th, td {
     border: 1px solid black;
     border-spacing: 3px;
 }
+
+
+/* TopNav */
+.topnav{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    overflow: auto;
+}
+.topnav a {
+    float: left;
+    text-decoration: none;
+    width: 33.33%;
+    text-align: center;
+}
+#topnav {
+    background-color: lightseagreen;
+    margin: 0px;
+    border: solid blue;
+}
+
+#I_forgot_how_to_select_alt_in_css{
+    height: 370px;
+    width: 800px;
+}
+
+/* @media screen allows things to change based on size of screen. example from w3 schools which makes topnav stack on small screens */
+@media screen and (max-width: 500px) {
+    .navbar a {
+      float: none;
+      display: block;
+      width: 100%;
+      text-align: left;
+    }
+}
+
+
+
+@keyframes rainbow-text {
+    0% {
+      color: #e87d7d;
+    }
+    2% {
+      color: #e88a7d;
+    }
+    4% {
+      color: #e8977d;
+    }
+    6% {
+      color: #e8a47d;
+    }
+    8% {
+      color: #e8b07d;
+    }
+    10% {
+      color: #e8bd7d;
+    }
+    12% {
+      color: #e8ca7d;
+    }
+    14% {
+      color: #e8d77d;
+    }
+    16% {
+      color: #e8e47d;
+    }
+    18% {
+      color: #dfe87d;
+    }
+    20% {
+      color: #d3e87d;
+    }
+    22% {
+      color: #c6e87d;
+    }
+    24% {
+      color: #b9e87d;
+    }
+    26% {
+      color: #ace87d;
+    }
+    28% {
+      color: #9fe87d;
+    }
+    30% {
+      color: #92e87d;
+    }
+    32% {
+      color: #86e87d;
+    }
+    34% {
+      color: #7de881;
+    }
+    36% {
+      color: #7de88e;
+    }
+    38% {
+      color: #7de89b;
+    }
+    40% {
+      color: #7de8a8;
+    }
+    42% {
+      color: #7de8b5;
+    }
+    44% {
+      color: #7de8c1;
+    }
+    46% {
+      color: #7de8ce;
+    }
+    48% {
+      color: #7de8db;
+    }
+    50% {
+      color: #7de8e8;
+    }
+    52% {
+      color: #7ddbe8;
+    }
+    54% {
+      color: #7dcee8;
+    }
+    56% {
+      color: #7dc1e8;
+    }
+    58% {
+      color: #7db5e8;
+    }
+    60% {
+      color: #7da8e8;
+    }
+    62% {
+      color: #7d9be8;
+    }
+    64% {
+      color: #7d8ee8;
+    }
+    66% {
+      color: #7d81e8;
+    }
+    68% {
+      color: #867de8;
+    }
+    70% {
+      color: #927de8;
+    }
+    72% {
+      color: #9f7de8;
+    }
+    74% {
+      color: #ac7de8;
+    }
+    76% {
+      color: #b97de8;
+    }
+    78% {
+      color: #c67de8;
+    }
+    80% {
+      color: #d37de8;
+    }
+    82% {
+      color: #df7de8;
+    }
+    84% {
+      color: #e87de4;
+    }
+    86% {
+      color: #e87dd7;
+    }
+    88% {
+      color: #e87dca;
+    }
+    90% {
+      color: #e87dbd;
+    }
+    92% {
+      color: #e87db0;
+    }
+    94% {
+      color: #e87da4;
+    }
+    96% {
+      color: #e87d97;
+    }
+    98% {
+      color: #e87d8a;
+    }
+    100% {
+      color: #e87d7d;
+    }
+  }
+  .sorryNotSorry h1 {
+    background-color: gray;
+    border-radius: 40px;
+    padding: 20px;
+    margin: 20px;
+    animation: rainbow-text 2.5s infinite;
+    font-size: 50px;
+  }
