--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,10 @@
 }
 
 body {
-    background-color: #ffb366;
+    background-image: url("covid_background.jpg");
+    margin: 50px;
+    background-attachment: fixed;
+    background-size: auto;
 }
 
 .content {
