--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-image: url("covid_background.jpg");
+    background-image: url("images/covid_background.jpg");
     margin: 50px;
     background-attachment: fixed;
     background-size: auto;
